[gd_scene load_steps=2 format=2]

[ext_resource path="res://Countdown.gd" type="Script" id=1]

[node name="Countdown" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tick" type="Timer" parent="."]
wait_time = 0.5

[node name="TickSwitch" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Tick" to="." method="_on_Tick_timeout"]
[connection signal="timeout" from="TickSwitch" to="." method="_on_TickSwitch_timeout"]
